# Docuseal_Pro

./: .env  .gitignore  API_DOCUMENTATION.md  API_DOWNLOAD_WITH_SIGNATURES.md  Cargo.toml  FOLDER_CODES_REFERENCE.md  FRONTEND_API_GUIDE.md  README.md  README_DEPLOYMENT.md  TEAM_ACCOUNTS.md  TEAM_INVITATION_FLOW.md  ad  build.rs  cleanup_completed.sql  comprehensive_test.sh  demo_folder_codes.sh  dev.sh  field_ids.txt  first_half.rs  ql -h localhost -p 5433 -U postgres -d docuseal -c SELECT column_name, data_type, is_nullable FROM information_schema.columns WHERE table_name = 'global_settings' ORDER BY ordinal_position;  ql -h localhost -p 5433 -U postgres -d docuseal -c \d global_settings  run.sh  run_full_test.ps1  second_half.rs  sign_simple.ps1  submitter_token.txt  test_body.json  test_delete_submitter.sh  test_document.doc  test_document.docx  test_nested_template.sh  test_simple_folders.sh  test_spreadsheet.xlsx  test_team_sharing.sh  test_token.rs  test_webhook.json  test_webhook_simple.json  token.txt  token_valid.txt
migrations/: 20250101000001_create_tables.sql  20250102000001_create_templates_table.sql  20250103000001_create_submissions_and_submitters.sql  20250103000002_create_submitters_table.sql  20250104000001_create_signature_tables.sql  20250123000001_add_activation_to_users.sql  20251001104948_add_user_id_to_templates.sql  20251002153929_alter_signature_data_ip_address.sql  20251003100217_add_signature_history_tracking.sql  20251003110000_merge_signature_tables.sql  20251003150000_template_fields_setup.sql  20251005000002_add_bulk_signatures_to_signature_positions.sql  20251005000003_cleanup_signature_positions.sql  20251007110253_add_role_to_users.sql  20251008102103_allow_duplicate_field_names.sql  20251008173006_add_soft_delete_to_template_fields.sql  20251013000001_add_partner_to_template_fields.sql  20251016000001_add_subscription_system.sql  20251020000001_add_template_folders.sql  20251021000001_remove_folder_color_description.sql  20251022000001_update_user_roles.sql  20251022000002_create_user_invitations.sql  20251028000001_create_submission_fields_table.sql  20251030000001_create_oauth_tokens_table.sql  20251031000001_add_reminder_config.sql  20251031000002_create_user_reminder_settings.sql  (+15 more)
(+157 files in other folders)
