[package]
name = "docuseal_pro"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
futures = "0.3"
axum-extra = { version = "0.9", features = ["multipart"] }
